--- a/package.json
+++ b/package.json
@@ -29,19 +29,24 @@
   },
   "homepage": "https://github.com/nurislam-ab/restaurant_page_js_project#readme",
   "devDependencies": {
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "file-loader": "^6.1.0",
+    "node-loader": "^1.0.1",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-csstree-validator": "^1.8.0",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "css-loader": "^3.6.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1"
+    "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "postcss-loader": "^3.0.0"
   }
 }
